[package]
name = "adam_fov_rs"
description = "A rust implementation of Adam Milazzo's FOV algorithm http://www.adammil.net/blog/v125_Roguelike_Vision_Algorithms.html#mine"
version = "0.2.0"
edition = "2021"
authors = ["sark", "Adam Milazzo"]
homepage = "https://github.com/sarkahn/adam_fov_rs"
repository = "https://github.com/sarkahn/adam_fov_rs"
license = "MIT"
readme = "README.md"
keywords = ["fov", "field-of-view", "roguelike", "2d"]

[dependencies]
glam = { version = "0.22" }
sark_grids = {path="../sark_grids_rs", version="0.5"}
bevy = {path="../bevy", version = "0.9", default-features = false, features = ["png", "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite"]}

[dev-dependencies]
bevy_ascii_terminal = {path="../bevy_ascii_terminal", version= "0.12"}
rand = "0.8.4"